[package]
name = "qiskit"
version = "0.0.0"
edition = "2024"
description = "Qiskit bindings for Rust"
readme = "README.md"
license = "Apache-2.0"
keywords = ["quantum", "qiskit"]

[lib]
name = "qiskit_rs"
path = "src/lib.rs"
test = true
# doctest = false

[build-dependencies]
bindgen = "0.72.0"
git2 = "0.20.2"

[dependencies]
