[package]
name = "qiskit"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust bindings to libqiskit"
readme = "README.md"
keywords = ["quantum", "qiskit"]

[workspace]
members = ["qiskit-sys"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = ["Matthew Treinish <mtreinish@kortar.org", "Emil Kovacev <emilkovacev@gmail.com>"]
license = "Apache-2.0"

[lib]
name = "qiskit_rs"
path = "src/lib.rs"
test = true
doctest = true

[dependencies]
qiskit-sys = { path = "qiskit-sys", version="2.2.3" }

[features]
wasm_js = [ "qiskit-sys/wasm_js" ]
